# Project-Cortex

./: .env.example  .gitignore  README.md  agent_context.py  context_assembler.py  issue_syncer.py  main.py  pyproject.toml  server.py
agents/: __init__.py  archivist.py  base.py  perplexity.py  registry.py  researcher.py  strategist.py
core/: __init__.py  context.py  strategist_context.py
db/: __init__.py  assembler.py  linear_tokens.py
migrations/: 001_create_cortex_schema.sql  002_add_cost_tracking.sql  002_closed_issue_summaries.sql
